# wsp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  RELEASING.md  build.rs  cliff.toml  dist-workspace.toml  release.toml
.github/workflows/: ci.yml
docs/: roadmap.md  usage.md
docs/plans/: smarter-unmerged-detection.md
skills/ws-manage/: SKILL.md
skills/wsp-manage/: SKILL.md
src/: config.rs  git.rs  giturl.rs  group.rs  main.rs  mirror.rs  output.rs  testutil.rs  workspace.rs
src/cli/: add.rs  cd.rs  cfg.rs  completers.rs  completion.rs  delete.rs  diff.rs  exec.rs  group.rs  list.rs  mod.rs  new.rs  push.rs  remove.rs  repo.rs  repo_list.rs  skill.rs  status.rs  sync.rs
src/lang/: go.rs  mod.rs
