[package]
name = "ws"
version = "0.3.2"
edition = "2024"
description = "Multi-repo workspace manager using local git clones"
license = "MIT"
repository = "https://github.com/jganoff/ws"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
ctrlc = "3"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
tabwriter = "1"
tempfile = "3"
url = "2"

[dev-dependencies]
assert_cmd = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
